# noether

./: .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  SECURITY.md  STABILITY.md  codecov.yml  mkdocs.yml
.cli/schemas/: stage-spec.json
.githooks/: pre-commit  pre-push
.github/: dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  new_stage.md
.github/workflows/: ci.yml  docs.yml  quickstart.yml  release.yml
crates/noether-cli/: Cargo.toml
crates/noether-cli/src/: main.rs  noether_runtime.js  output.rs
crates/noether-cli/src/commands/: agent_docs.rs  build.rs  build_browser.rs  build_mobile.rs  compose.rs  executor_builder.rs  mod.rs  resolver_utils.rs  run.rs  serve.rs  stage.rs  store.rs
crates/noether-core/: Cargo.toml
crates/noether-core/src/: capability.rs
crates/noether-core/src/effects/: effect.rs  mod.rs
crates/noether-core/src/stage/: builder.rs  hash.rs  mod.rs  property.rs  schema.rs  spec.rs  validation.rs
crates/noether-core/src/stdlib/: collections.rs  control.rs  data.rs  generic.rs  internal.rs  io.rs  kv.rs  llm.rs  mod.rs  process.rs  scalar.rs  text.rs  ui.rs  validation.rs
crates/noether-core/src/types/: checker.rs  display.rs  mod.rs  primitive.rs  refinement.rs  unification.rs
crates/noether-core/tests/: integration_test.rs  property_tests.rs
crates/noether-engine/: Cargo.toml
crates/noether-engine/src/: checker.rs  lib.rs  planner.rs  providers.rs  registry_client.rs  stage_test.rs  trace.rs
crates/noether-engine/src/agent/: mod.rs  prompt.rs
crates/noether-engine/src/executor/: budget.rs  composite.rs  inline.rs  isolation.rs  mod.rs  nix.rs  runner.rs  runtime.rs  validating.rs
crates/noether-engine/src/executor/stages/: arrow.rs  collections.rs  control.rs  generic.rs  mod.rs  process.rs  text.rs  ui.rs  validation.rs
crates/noether-engine/src/index/: cache.rs  embedding.rs  mod.rs  search.rs  text.rs
crates/noether-engine/src/lagrange/: ast.rs  canonical.rs  deprecation.rs  mod.rs  resolver.rs
crates/noether-engine/src/llm/: claude_cli.rs  cli_provider.rs  mistral.rs  mod.rs  vertex.rs
crates/noether-engine/src/optimizer/: canonical_structural.rs  dead_branch.rs  mod.rs
crates/noether-engine/tests/: generic_stdlib_polymorphism.rs  index_integration.rs  integration.rs  isolation_escape.rs  laws.proptest-regressions  laws.rs  nix_e2e.rs  refinement_runtime.rs
crates/noether-grid-broker/: Cargo.toml  README.md  demo.sh
crates/noether-grid-broker/infra/: noether-grid-broker.service
crates/noether-grid-broker/migrations/: 0001_init.sql
crates/noether-grid-broker/src/: main.rs  persistence.rs  registry.rs  router.rs  routes.rs  splitter.rs  state.rs
crates/noether-grid-broker/src/assets/: dashboard.html
crates/noether-grid-broker/tests/: dispatch_e2e.rs
crates/noether-grid-protocol/: Cargo.toml
crates/noether-grid-protocol/src/: lib.rs
crates/noether-grid-worker/: Cargo.toml
crates/noether-grid-worker/infra/: noether-grid-worker.service
crates/noether-grid-worker/src/: main.rs
crates/noether-isolation/: Cargo.toml
crates/noether-isolation/src/: lib.rs
crates/noether-sandbox/: Cargo.toml
crates/noether-sandbox/src/: main.rs
crates/noether-scheduler/: Cargo.toml
crates/noether-scheduler/src/: main.rs
crates/noether-store/: Cargo.toml
crates/noether-store/src/: file.rs  invariant.rs  lib.rs  memory.rs  traits.rs
crates/noether-store/tests/: stdlib_store.rs
demo/: index.md  run-demo.sh
demo/recordings/: demo1-compose.cast  demo2-typesafety.cast  demo3-parallel.cast  demo4-reuse.cast  demo5-agent.cast  demo6-ml.cast  record-demo1-compose.sh  record-demo5-agent.sh  record-demo6-ml.sh
docs/: changelog.md  concepts.md  demo.md  examples.md  index.md  install.md  roadmap.md  usage.md
docs/agents/: compose-a-graph.md  debug-a-failed-graph.md  express-a-property.md  find-an-existing-stage.md  index.md  synthesize-a-new-stage.md
docs/architecture/: nix-execution.md  optimizer.md  overview.md  semantics.md  stage-identity.md
docs/case-studies/: benchmark.md  search-engines.md
docs/cli/: commands.md
docs/engineering/: unwrap-audit-issue-42.md
docs/examples/: index.md
docs/getting-started/: index.md  quickstart.md
docs/guides/: custom-stages.md  filesystem-effects.md  remote-registry.md  sandbox-isolation.md  scheduler.md  semantic-search.md
docs/research/: cloud-registry.md  grid-capabilities.md  grid.md  llm-here.md  wasm-target.md
docs/roadmap/: 2026-04-18-property-dsl-expansion.md  2026-04-18-rock-solid-plan.md  2026-04-18-stage-isolation.md
docs/stdlib/: catalogue.md  overview.md
docs/tutorial/: concepts.md  index.md  llm-compose.md  when-things-go-wrong.md
examples/: README.md
examples/counter/: README.md  counter-stage.json  graph.json
examples/property-annotated/: README.md  take_first_n.json
examples/stage-explorer/: README.md
examples/stage-explorer/api/: explorer-api-stage.json  graph.json
examples/stage-explorer/ui/: explorer-ui-stage.json  graph.json
examples/todo/: README.md
examples/todo/api/: graph.json  todo-api-stage.json
examples/todo/ui/: graph.json  todo-ui-stage.json
noether-research/: README.md
noether-research/cloud-registry/: DESIGN.md
noether-research/noether-react/: DESIGN.md
noether-research/ui-port/: DESIGN.md
noether-research/wasm-target/: DESIGN.md
