[workspace]
resolver = "2"
members = [
    "crates/noether-core",
    "crates/noether-store",
    "crates/noether-engine",
    "crates/noether-cli",
]

[workspace.package]
version = "0.1.0"
edition = "2021"

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
ed25519-dalek = { version = "2", features = ["serde", "rand_core"] }
rand = "0.8"
hex = "0.4"
thiserror = "2"
proptest = "1"
acli = "0.4"
clap = { version = "4", features = ["derive"] }
reqwest = { version = "0.12", features = ["blocking", "json", "rustls-tls"], default-features = false }
regex = "1"
