[workspace]
resolver = "2"
members = [
    "crates/noether-core",
    "crates/noether-store",
    "crates/noether-engine",
    "crates/noether-cli",
    "crates/noether-scheduler",
    # Grid — shipped in v0.4.0. See docs/research/grid.md + crates/noether-grid-broker/README.md.
    "crates/noether-grid-protocol",
    "crates/noether-grid-broker",
    "crates/noether-grid-worker",
]

[workspace.package]
version = "0.6.0"
edition = "2021"
license = "EUPL-1.2"
repository = "https://github.com/alpibrusl/noether"
homepage = "https://github.com/alpibrusl/noether"
description = "Agent-native verified composition platform: typed, content-addressed stages composed into reproducible pipelines"
keywords = ["agent", "llm", "composition", "pipeline", "workflow"]
categories = ["development-tools", "command-line-utilities"]

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.11"
ed25519-dalek = { version = "2", features = ["serde", "rand_core"] }
rand = "0.10"
hex = "0.4"
thiserror = "2"
proptest = "1"
acli = "0.4"
clap = { version = "4", features = ["derive", "env"] }
reqwest = { version = "0.13", features = ["blocking", "json", "form", "rustls"], default-features = false }
regex = "1"
chrono = { version = "0.4", features = ["serde"] }
