[package]
name = "noether-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true
description = "Noether CLI: ACLI-compliant command-line interface for stage management, composition graph execution, and LLM-powered compose"

[[bin]]
name = "noether"
path = "src/main.rs"

[dependencies]
noether-core = { path = "../noether-core", version = "0.4" }
noether-store = { path = "../noether-store", version = "0.4" }
noether-engine = { path = "../noether-engine", version = "0.4" }
acli = { workspace = true }
clap = { workspace = true }
serde_json = { workspace = true }
hex = { workspace = true }
ed25519-dalek = { workspace = true }
rand = { workspace = true }
sha2.workspace = true
