[package]
name = "noether-core"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true
description = "Noether core: type system, effects, content-addressed stage schema, Ed25519 signing, stdlib"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
serde_jcs = "0.2"
sha2 = { workspace = true }
ed25519-dalek = { workspace = true }
rand = { workspace = true }
hex = { workspace = true }
thiserror = { workspace = true }

[target.'cfg(target_arch = "wasm32")'.dependencies]
getrandom = { version = "0.4", features = ["wasm_js"] }

[dev-dependencies]
proptest = { workspace = true }
