[package]
name = "noether-grid-broker"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true
description = "RESEARCH — noether-grid broker: pools worker LLM capacity, dispatches jobs"
publish = false

[[bin]]
name = "noether-grid-broker"
path = "src/main.rs"

[dependencies]
noether-grid-protocol = { path = "../noether-grid-protocol", version = "0.3" }
noether-engine = { path = "../noether-engine", version = "0.3" }
noether-store = { path = "../noether-store", version = "0.3" }

serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
tokio = { version = "1", features = ["full"] }
axum = "0.8"
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
uuid = { version = "1", features = ["v4"] }
tower-http = { version = "0.6", features = ["cors", "trace"] }
clap = { version = "4", features = ["derive", "env"] }

[dev-dependencies]
axum = "0.8"
tokio = { version = "1", features = ["full", "test-util"] }
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
