[package]
name = "noether-grid-broker"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true
description = "RESEARCH — noether-grid broker: pools worker LLM capacity, dispatches jobs"
publish = false

[[bin]]
name = "noether-grid-broker"
path = "src/main.rs"

[dependencies]
noether-grid-protocol = { path = "../noether-grid-protocol", version = "0.3" }
noether-engine = { path = "../noether-engine", version = "0.3" }
noether-store = { path = "../noether-store", version = "0.3" }
noether-core = { path = "../noether-core", version = "0.3" }

serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
tokio = { version = "1", features = ["full"] }
axum = "0.8"
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
uuid = { version = "1", features = ["v4"] }
tower-http = { version = "0.6", features = ["cors", "trace"] }
clap = { version = "4", features = ["derive", "env"] }
prometheus = { version = "0.13", default-features = false, features = ["process"] }
# Postgres-backed durability is deferred to phase 4 — see docs/research/grid.md.
# The broker is currently in-memory; restart re-enrols workers via heartbeat
# within ~10s and re-fires any pending sprint-tick on the next cron edge,
# which is fine for caloron's pilot loop.

[dev-dependencies]
axum = "0.8"
tokio = { version = "1", features = ["full", "test-util"] }
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
