[package]
name = "noether-scheduler"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true
description = "Cron-based composition scheduler — runs Noether Lagrange graphs on a schedule, fires webhooks on result"

[[bin]]
name = "noether-scheduler"
path = "src/main.rs"

[dependencies]
noether-core = { path = "../noether-core", version = "0.7" }
noether-store = { path = "../noether-store", version = "0.7" }
noether-engine = { path = "../noether-engine", version = "0.7" }

serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
reqwest = { workspace = true }
chrono = { workspace = true }

clap = { version = "4", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
cron = "0.12"
